# aoc_24

./: Cargo.toml  run  rust-toolchain.toml
.cargo/: config.toml
src/: io.rs  lib.rs  main.rs  print.rs  syscall.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  mod.rs
